# Azazel

./: .dockerignore  .env.example  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  lint.sh  pyproject.toml  pyrightconfig.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.sh
.github/workflows/: dependency-review.yml
azazel/: __main__.py  azazel_bot.py  bot.py  main.py
azazel/cogs/: message_mod.py  ping.py  user_mod.py
azazel/cogs/errors/: error_handler.py
azazel/cogs/events/: welcome.py
azazel/cogs/moderation/: message_mod.py  user_mod.py
azazel/cogs/utils/: info.py  ping.py
azazel/commands/: ping.py
azazel/config/: env.py  log.py  settings.py
azazel/repositories/: database.py
azazel/utils/: constants.py  embeds.py  exceptions.py
scripts/: format.sh  install_dependencies.sh  run.sh
