[tool.poetry]
name = "azazel"
version = "0.2.0"
description = "A versatile Disord Bot designed to enhance server management."
authors = ["Daniel Lima"]
readme = "README.md"
keywords = [
    "discord bot",
    "chatbot",
    "discord",
    "python",
    "moderation",
    "asyncio",
    "bot",
    "community management",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
    "Topic :: Games/Entertainment",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.group.dev.dependencies]
codespell = "^2.3.0"
pre-commit = "^4.0.1"
pylint = "^3.3.3"
black = "^24.10.0"
isort = "^5.13.2"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
discord-py = "^2.4.0"
httpx = "^0.28.1"

[tool.pyright]
exclude = [".venv", "tests", "docs", "build", "dist", ".git", ".github"]
typeCheckingMode = "strict"
reportUnusedImport = "warning"
reportMissingImports = "information"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportMissingTypeStubs = "information"
reportPrivateImportUsage = "error"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
